--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
   ],
   "scripts": {
     "build": "nwb build",
-    "clean": "nwb clean",
-    "start": "nwb serve",
-    "test": "nwb test",
-    "test:watch": "nwb test --server"
+    "clean": "nwb clean"
   },
   "dependencies": {
+    "socrates": "^1.0.2"
   },
   "peerDependencies": {
     "react": "0.14.x"
   },
   "devDependencies": {
+    "eslint": "^2.5.3",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
     "nwb": "0.9.x",
     "react": "0.14.x",
     "react-dom": "0.14.x"
   },
-  "author": "",
-  "homepage": "",
+  "author": "Bryan Fillmer <bryan.fillmer@gmail.com>",
+  "homepage": "https://github.com/bfillmer",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://github.com/bfillmer/socrates-container",
   "keywords": [
     "react-component"
   ]
